<resources>
    <string name="app_name">니드캐시</string>
    <string name="request_amount">현금 단위</string>
    <string name="total">총 금액</string>
    <string name="cash_please">현금 찾기</string>
    <string name="noti_disable">현금 요청 알림</string>
    <string name="gratuity_ratio">사례금</string>
    <string name="distance_limit">거리 한도</string>
    <string name="cancel">취소</string>
    <string name="map_loading">좌표 로딩중…</string>
    <string name="setting">설정</string>
    <string name="no_account_num">계좌 정보 없음</string>
    <string name="plz_check_account">계좌 정보를 등록해주세요.</string>
    <string name="account_num">계좌 번호</string>
    <string name="retry">재시도</string>
</resources>