<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_settings_24"
        android:layout_gravity="end"
        android:onClick="onSettingButtonClick"
        android:background="#ffffff"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_weight="20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/round_all_button_lightgrey"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/tv_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/no_account_num"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/plz_check_account"
                    android:textColor="@color/app_theme"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round_button_lightgrey"
                android:gravity="center"
                android:minWidth="50dp"
                android:minHeight="0dp"
                android:onClick="onAccountButtonClick"
                android:padding="7dp"
                android:text="계좌"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ECEBEB"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="15">

            <TextView
                android:id="@+id/tv_requestAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_amount"
                android:textSize="25sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <include
                    android:id="@+id/item_hundred"
                    layout="@layout/cash_amount_item" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <include
                    android:id="@+id/item_fiveHundred"
                    layout="@layout/cash_amount_item" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <include
                    android:id="@+id/item_thousand"
                    layout="@layout/cash_amount_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_10000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <include
                    android:id="@+id/item_tenThousand"
                    layout="@layout/cash_amount_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_50000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <include
                    android:id="@+id/item_fiftyThousand"
                    layout="@layout/cash_amount_item" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ECEBEB"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="0 원"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_cashPlease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_please"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/round_button_theme"
                android:layout_weight="1"
                android:onClick="onCashPleaseButtonClick"/>
        </LinearLayout>


        </LinearLayout>

</LinearLayout>