<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FindingActivity"
    android:id="@+id/cl_find_activity"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:id="@+id/ll_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <fragment
                android:id="@+id/fm_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".GoogleMapActivity"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/pb_finding"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_finding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/map_loading"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pb_finding" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_loading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/loading"
                android:layout_weight="1"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="onCancelButtonClick"
                    android:background="@drawable/round_button_lightgrey"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/btn_retry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="onRetryButtonClick"
                    android:background="@drawable/round_button_theme"
                    android:text="@string/retry"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center" />

                <RelativeLayout
                    android:id="@+id/rl_btn_toss"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button_lightgrey"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:onClick="onTossButtonClick">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/logo_toss_resize"
                        android:gravity="center"
                        android:text=" 로 간편하게 송금하기"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>